bases/infrastructure/argo-apps/argocd/overlays/loadbalancer-argocd-server-service.yaml
# We want the server to have a service type of LoadBalancer so we can map the ingress to it.
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
spec:
  type: LoadBalancer
